--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Character Counter | Helpme_coder</title>
+    <title>Character Counter || Web_Obsession_2.0</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
